# electra_pytorch

./: .gitignore  Makefile  Pretrain.ipynb  pyproject.toml
finetune/: Finetune_GLUE.ipynb
pl-pretrain/: .gitignore  Makefile  Pretrain-download.ipynb  Pretrain-lightning.ipynb  README.md  checkpoint_pct.py  get_dataloaders.py  pl_model.py  scheduler.py
pl-pretrain/_utils/: electra_dataprocessor.py  hf_dataset.py
pl-pretrain/adam_wo_bc/: __init__.py  _functional.py  adam_wo_bc.py
pretrain/: .gitignore  Pretrain-Copy1.ipynb  Pretrain-lightning.ipynb  Pretrain.ipynb  Untitled.ipynb  download_datasets.py  get_dataloaders.py  mask_tokens.py  masked_lm_cb.py  models.py  optim.py  pl_model.py  scheduler.py
pretrain/_utils/: electra_dataprocessor.py  hf_dataset.py  mysorteddl.py  would_like_to_pr.py
pretrain/_utils/hugdatafast/: fastai.py
