[tool.poetry]
name = "electra_pytorch"
version = "0.1.0"
description = ""
authors = ["Koichi Miyamoto <m5813k@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.0.0"
torch = "^1.7.1"
datasets = "^1.1.3"
fastai = "2.1.10"
transformers = "^4.1.1"
hugdatafast = "^1.0.0"
ipywidgets = "^7.5.1"
jupyter-lsp = "^0.9.3"
python-language-server = {extras = ["all"], version = "^0.36.2"}
pyls-mypy = "^0.1.8"
wandb = "^0.10.13"
pytorch-lightning = "^1.1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
